--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "@markgarrigan/ls",
   "version": "0.0.1",
   "description": "Simplified local storage state history.",
-  "main": "src/index.js",
+  "source": "src/index.js",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\""
+    "test": "echo \"Error: no test specified\"",
+    "build": "parcel build --no-optimize --no-scope-hoist --no-source-maps --no-cache"
   },
   "repository": {
     "type": "git",
@@ -20,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/markgarrigan/ls/issues"
   },
-  "homepage": "https://github.com/markgarrigan/ls#readme"
+  "homepage": "https://github.com/markgarrigan/ls#readme",
+  "dependencies": {
+    "@markgarrigan/deepdiff": "^0.0.3"
+  }
 }
